--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # Allow manual trigger
+  workflow_dispatch:
 
 jobs:
   build-macos:
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
     
@@ -34,11 +34,11 @@ jobs:
         from setuptools import setup
         import os
         
-        APP = ['Artwork_Processor.py']  # Your main Python file
+        APP = ['Artwork_Processor.py']
         DATA_FILES = []
         OPTIONS = {
             'argv_emulation': True,
-            'iconfile': None,  # Add .icns file path if you have an icon
+            'iconfile': None,
             'plist': {
                 'CFBundleName': 'Artwork Release Data Processor',
                 'CFBundleDisplayName': 'Artwork Release Data Processor',
@@ -68,36 +68,9 @@ jobs:
       run: |
         python setup.py py2app
         
-    - name: Create DMG (optional)
-      run: |
-        # Install create-dmg if you want a DMG installer
-        brew install create-dmg
-        create-dmg \
-          --volname "Artwork Release Data Processor" \
-          --window-pos 200 120 \
-          --window-size 600 300 \
-          --icon-size 100 \
-          --icon "Artwork Release Data Processor.app" 175 120 \
-          --hide-extension "Artwork Release Data Processor.app" \
-          --app-drop-link 425 120 \
-          "ArtworkProcessor-macOS.dmg" \
-          "dist/"
-    
     - name: Upload macOS App
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: artwork-processor-macos
-        path: |
-          dist/
-          *.dmg
+        path: dist/
         retention-days: 30
-
-    - name: Create Release (if tag)
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          ArtworkProcessor-macOS.dmg
-          dist/Artwork Release Data Processor.app/**
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
